--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Bundle Tailwindcss */
+
+.purple_gradient {
+  @apply bg-[conic-gradient(at_top_left,_var(--tw-gradient-stops))] from-gray-100 via-purple-600 to-cyan-100 bg-clip-text text-transparent;
+}
+
+.menu_item {
+  @apply w-full flex flex-row space-x-2 items-center justify-center text-center text-white text-base py-2 hover:font-bold hover:bg-gray-700 duration-150 ease-in;
+}
